# TrueML

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  helpers.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  pytest-integration.yml  release.yml
benchmarks/: bench_linear_regression.ipynb  bench_linear_regression.py
docs/: index.md  philosophy.md
docs/api/: absolute_error.md  linear_regression.md  squared_error.md
docs/explanation/: about-gradient-descent.md  about-loss-functions.md  calculus-mapping.md  no-abstraction-philosophy.md
docs/how-to/: debug-gradient-issues.md  implement-minibatch-gd.md  manual-gradient-descent.md  train-on-real-data.md
docs/recipes/: manual_gradient_descent.md
docs/reference/: absolute-error.md  activations.md  errors.md  extras.md  gemm.md  helpers.md  history.md  linalg.md  linear-regression.md  logistic-regression.md  mae-loss.md  metrics.md  mse-loss.md  signed-error.md  squared-error.md  visualization.md
docs/theory/: calculus_mapping.md
docs/tutorials/: comparing-loss-functions.md  your-first-training-loop.md
explanation/about-gradient-descent/: index.html
explanation/about-loss-functions/: index.html
explanation/calculus-mapping/: index.html
explanation/no-abstraction-philosophy/: index.html
how-to/debug-gradient-issues/: index.html
how-to/implement-minibatch-gd/: index.html
how-to/manual-gradient-descent/: index.html
how-to/train-on-real-data/: index.html
notebooks/: LinearReg-California_Housing.ipynb
notebooks/linear_models/: LinearReg-California_Housing.ipynb  LogisticReg_breast_cancer.ipynb
notebooks/linearmodels/: LinearReg-California_Housing.ipynb
notebooks/plot/: bar_plot.ipynb  (+8 more)
philosophy/: index.html
search/: search_index.json
tinymlx/: __init__.py  _utils.py
trueml/: __init__.py  helpers.py  history.py
(+178 files in other folders)
