[project]
name = "tinymlx"
version = "0.1.0"
description = "TinyML — minimal, high-performance Machine Learning library."

readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Prasad Raju G" }
]

dependencies = [
    "numpy",
    "plotly",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

docs = [
    "mkdocs-material",
    "mkdocs"
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]


