[project]
name = "trueml"
version = "0.0.1"
description = "Machine learning without hidden abstractions."

readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Prasad Raju G" }
]

dependencies = [
    "numpy",
    "matplotlib",
    "ipympl",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17"
]