[project]
name = "trueml"
version = "0.0.1"
description = "Machine learning without hidden abstractions."

readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Prasad Raju G" }
]

dependencies = [
    "numpy",
    "matplotlib",
    "ipympl",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "pre-commit>=4.6.0",
    "black>=25.9.0",
    "isort>=6.1.0",
]

[tool.ruff]
extend-exclude = ["notebooks", "benchmarks/*.ipynb"]
